update for optional use